--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: thumper
-description: A flutter widget for controlling an Iterable. Shows reset, step, play, pause and speed controls.
-version: 0.1.3
+description: Widget for controlling an Iterable. Shows reset, forward step, play, pause and speed controls.
+version: 0.1.4
 homepage: https://github.com/monopole/thumper
 
 environment:
