--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: thumper
 description: Widget for controlling an Iterable. Shows reset, forward step, play, pause and speed controls.
-version: 0.1.10
+version: 1.0.0
 homepage: https://github.com/monopole/thumper
 
 environment:
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^3.2.0
+  meta: ^1.1.8
   test: ^1.14.2
   tuple: ^1.0.3
 
