--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: thumper
 description: Widget for controlling an Iterable. Shows reset, forward step, play, pause and speed controls.
-version: 1.0.0
+version: 1.0.1
 homepage: https://github.com/monopole/thumper
 
 environment:
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^3.2.0
   meta: ^1.1.8
+  pedantic: ^1.8.0
   test: ^1.14.2
   tuple: ^1.0.3
 
