--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,21 +4,22 @@ version: 2.1.1
 homepage: https://github.com/monopole/thumper
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
-  bloc: ^4.0.0
+  thumper_bloc:
+    path: ../thumper_bloc
   flutter:
     sdk: flutter
-  flutter_bloc: ^4.0.0
-  meta: ^1.1.8
-  pedantic: ^1.9.0
-  test: ^1.14.2
-  tuple: ^1.0.3
+  flutter_bloc: ^8.0.1
+  meta: ^1.7.0
+#  tuple: ^2.0.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  test: ^1.20.1
+  lints: ^1.0.1
+#  flutter_test:
+#    sdk: flutter
 
 flutter:
   uses-material-design: true
