--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,23 @@
 name: thumper
 description: Widget for controlling an Iterable. Shows reset, forward step, play, pause and frequency controls.
-version: 2.1.2
+version: 2.2.0
 homepage: https://github.com/monopole/thumper
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
-  thumper_bloc:
-    path: ../thumper_bloc
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
   meta: ^1.7.0
+  equatable: ^2.0.3
+  bloc: ^8.0.3
+  logging: ^1.0.2
 
 dev_dependencies:
-  test: ^1.20.1
+  bloc_test: ^9.0.3
+  test: ^1.20.2
   lints: ^1.0.1
 
 flutter:
